feat(ui): implement BuildAdapter using ListAdapter and localized strings
- Create BuildAdapter extending ListAdapter for efficient RecyclerView updates
- Implement DiffUtil callback for item comparison
- Add BuildHolder as a static inner class with click handling
- Add OnItemClickListener interface for external interaction
- Add string format resources to strings.xml to avoid string concatenation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EldenBuilds</string>
+    <string name="text_level_format">Lvl %1$d</string>
+    <string name="text_class_format">Class: %1$s</string>
+    <string name="text_weapons_format">R: %1$s / L: %2$s</string>
+    <string name="unknown">Unknown</string>
+    <string name="empty_slot">-</string>
 </resources>
