feat(ui): implement MainActivity logic with ViewModel and RecyclerView observation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="text_weapons_format">R: %1$s / L: %2$s</string>
     <string name="unknown">Unknown</string>
     <string name="empty_slot">-</string>
+    <string name="add_build">Add Build</string>
 </resources>
